deploy/kubernetes/gateway/gateway-class.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: funkey-envoy
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
